fixed scrollspy & changed section's padding on mobiles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,13 +90,17 @@
   html {
     font-size: 10px;
   }
-
+  .section {
+    padding: 30px 0 0 0;
+  }
   .section__hero {
     background-position: calc(50% - 50px) 50%;
+    padding: 150px 0 0 0;
   }
 }
+
 @media screen and (min-width:320px) and (max-width:767px) and (orientation:landscape) {
   .section {
-    padding: 70px 0 0 0;
+    padding: 20px 0 0 0;
   }
 }
